    - Added Japanese translation by Koji Yokota.
    - Added scrollbar to entry editor when it is too high to fit in its panel. Patch
      by Matthias Erll 
    - Made it possible to copy entries from the search dialog.    
    - Added proper error message when trying to search with invalid regular expression.
    - Added error dialog on startup if custom look and feel cannot be loaded.
    - Applied Alexander Hug's patch for correctly importing doi from ScienceDirect RIS files.
    - Removed potential NullPointerException in SearchExpressionTreeParser.
2.7 beta
    - Some improvements to MS Office export filter.
    - Introduced three choices for ensuring unique generated keys. The default one (marking
      with a, b, etc.), a modified one (marking with b, c, etc.) and always adding a letter
      (a, b, etc.).
    - Font and background colors are now customizable in the entry editor (Options ->
      Preferences -> Appearance).
    - Window title now includes the full path to the current file.
    - Entries can now be marked in a series of different colors. Automarking of imported
      entries is now done in separate color without affecting other marked entries.
    - Added new feature (Tools -> Scan database... -> Resolve duplicate BibTeX keys) to
      search for duplicate keys and offer to generate new keys to resolve the duplicates.
      Instead of being listed in a warning dialog after opening a bib file, duplicate keys
      now trigger a dialog asking whether the user wants to resolve the duplicates.
    - Added check that ensures that application doesn't quit while a large save operation
      is still in progress. Shows wait message with cancel button.
    - Added apostrophe (') as illegal character in BibTeX keys.
    - BibTeX strings that refer each other are now sorted correctly when saving bib file.
    - Fixed bug in merging external changes - file would still be reported as modified
      externally after merging changes.