@@ -1125,7 +1125,6 @@ You_have_cleared_this_field._Original_value=Du_har_slettet_dette_felt._Oprindeli
 
 You_have_entered_an_invalid_search_'%0'.=Ugyldigt_s\u00F8geudtryk_'%0'.
 You_must_choose_a_file_name_to_store_journal_abbreviations=Du_skal_v\u00E6lge_et_filnavn_for_at_gemme_tidsskriftsforkortelser
-You_must_enter_an_integer_value_in_the_text_field_for=Du_skal_skrive_et_heltal_i_tekstfeltet_for
 You_must_fill_in_a_name_for_the_entry_type.=Du_skal_v\u00E6lge_et_navn_til_posttypen.
 You_must_restart_JabRef_for_the_new_key_bindings_to_work_properly.=Du_skal_genstarte_JabRef_for,_at_de_nye_genvejstaster_skal_fungere.
 You_must_select_at_least_one_row_to_perform_this_operation.=Du_skal_v\u00E6lge_mindst_\u00E9n_r\u00E6kke,_f\u00F8r_du_kan_bruge_denne_operation.
@@ -1366,3 +1365,5 @@ Search_failed\:_illegal_search_expression=S\u00F8gning_fejlede:_illegalt_s\u00F8
 Background_color_for_marked_entries=Baggrundsfarve_til_m\u00E6rkede_poster
 Highlight_groups_that_contain_entries_contained_in_any_currently_selected_group=Fremh\u00E6v_grupper_der_indeholder_poster,_som_er_med_i_en_af_de_valgte_grupper
 Show_ArXiv_column=Vis_ArXiv-kolonne
+
+You_must_enter_an_integer_value_in_the_interval_1025-65535_in_the_text_field_for=
