@@ -1946,8 +1946,6 @@ You_have_entered_an_invalid_search_'%0'.=Sie_haben_eine_ung\u00FCltige_Suche_'%0
 
 You_must_choose_a_file_name_to_store_journal_abbreviations=Sie_m\u00FCssen_einen_Dateinamen_w\u00E4hlen,_um_die_Abk\u00FCrzungen_der_Zeitschriften_zu_speichern
 
-You_must_enter_an_integer_value_in_the_text_field_for=Sie_m\u00FCssen_eine_Ganzzahl_verwenden_im_Textfeld_f\u00FCr
-
 You_must_fill_in_a_name_for_the_entry_type.=Sie_m\u00FCssen_einen_Namen_f\u00FCr_den_Eintragstyp_eingeben.
 
 You_must_restart_JabRef_for_the_new_key_bindings_to_work_properly.=Sie_m\u00FCssen_JabRef_neu_starten,_damit_die_Tastenk\u00FCrzel_funktionieren.
@@ -2197,3 +2195,5 @@ Show_ArXiv_column=Zeige_ArXiv-Spalte
 <HTML>Unpack_the_zip_file_containing_import/export_filters_for_Endnote,<BR>for_optimal_interoperability_with_JabRef</HTML>=<HTML>Entpacke_die_Zip-Datei_mit_den_Import-/Export-Filtern_f\u00fcr_Endnote,_<BR>um_eine_optimale_Interfunktion_mit_JabRef_zu_gew\u00e4hrleisten.
 Background_color_for_marked_entries=Hintergrundfarbe_f\u00fcr_markierte_Eintr\u00e4ge
 Highlight_groups_that_contain_entries_contained_in_any_currently_selected_group=Gruppen_hervorheben,_die_Eintr\u00e4ge_in_einer_der_ausgew\u00e4hlten_Gruppen_enthalten
+
+You_must_enter_an_integer_value_in_the_interval_1025-65535_in_the_text_field_for=
