@@ -1924,7 +1924,6 @@ You_have_entered_an_invalid_search_'%0'.=You_have_entered_an_invalid_search_'%0'
 
 You_must_choose_a_file_name_to_store_journal_abbreviations=You_must_choose_a_file_name_to_store_journal_abbreviations
 
-You_must_enter_an_integer_value_in_the_text_field_for=You_must_enter_an_integer_value_in_the_text_field_for
 
 You_must_fill_in_a_name_for_the_entry_type.=You_must_fill_in_a_name_for_the_entry_type.
 
@@ -2179,3 +2178,5 @@ General_file_directory=General_file_directory
 User-specific_file_directory=User-specific_file_directory
 Search_failed\:_illegal_search_expression=Search_failed:_illegal_search_expression
 Show_ArXiv_column=Show_ArXiv_column
+
+You_must_enter_an_integer_value_in_the_interval_1025-65535_in_the_text_field_for=You_must_enter_an_integer_value_in_the_interval_1025-65535_in_the_text_field_for
