@@ -1129,7 +1129,6 @@ You_have_changed_the_menu_and_label_font_size._You_must_restart_JabRef_for_this_
 You_have_cleared_this_field._Original_value=Vous_avez_vid\u00E9_ce_champ._Valeur_originale
 You_have_entered_an_invalid_search_'%0'.=Vous_avez_entr\u00E9_une_recherche_invalide_'%0'.
 You_must_choose_a_file_name_to_store_journal_abbreviations=Vous_devez_choisir_un_nom_de_fichier_pour_stocker_les_abr\u00E9viations_de_journaux
-You_must_enter_an_integer_value_in_the_text_field_for=Vous_devez_entrer_une_valeur_enti\u00E8re_dans_le_champ_texte_pour
 You_must_fill_in_a_name_for_the_entry_type.=Vous_devez_fournir_un_nom_pour_le_type_d'entr\u00E9e.
 You_must_restart_JabRef_for_the_new_key_bindings_to_work_properly.=Vous_devez_relancer_JabRef_pour_que_les_nouvelles_affectations_des_touches_soient_activ\u00E9es
 You_must_select_at_least_one_row_to_perform_this_operation.=Vous_devez_s\u00E9lectionner_au_moins_une_colonne_pour_effectuer_cette_op\u00E9ration.
@@ -1296,3 +1295,5 @@ User-specific_file_directory=R\u00E9pertoire_sp\u00E9cifique_\u00E0_l'utilisateu
 Error_setting_look_and_feel=Erreur_dans_les_param\u00E8tres_d'apparence
 Search_failed\:_illegal_search_expression=Echec_de_la_recherche_:_Expression_de_recherche_ill\u00E9gale
 Show_ArXiv_column=Montrer_la_colonne_ArXiv
+
+You_must_enter_an_integer_value_in_the_interval_1025-65535_in_the_text_field_for=
