@@ -1263,7 +1263,6 @@ You_have_changed_the_menu_and_label_font_size._You_must_restart_JabRef_for_this_
 You_have_cleared_this_field._Original_value=Anda_sudah_membersihkan_bidang_ini._Isi_aslinya
 You_have_entered_an_invalid_search_'%0'.=Anda_telah_menulis_pencarian_yang_salah_'%0'.
 You_must_choose_a_file_name_to_store_journal_abbreviations=Anda_harus_memilih_nama_berkas_untuk_menyimpan_singkatan_jurnal
-You_must_enter_an_integer_value_in_the_text_field_for=Anda_harus_menulis_bilangan_bulat_dalam_bidang_teks
 You_must_fill_in_a_name_for_the_entry_type.=Anda_harus_mengisi_nama_untuk_tipe_entri.
 You_must_restart_JabRef_for_the_new_key_bindings_to_work_properly.=Anda_harus_menjalankan_ulang_JabRef_agar_gabungan_kunci_dapat_berfungsi.
 You_must_select_at_least_one_row_to_perform_this_operation.=Anda_harus_memilih_paling_tidak_satu_baris_untuk_memulai_proses_ini.
@@ -1274,3 +1273,5 @@ User-specific_file_directory=Direktori_berkas_khusus_pengguna
 Error_setting_look_and_feel=Kesalahan_pengaturan_penampilan
 Search_failed\:_illegal_search_expression=Pencarian_gagal\:_ekspresi_pencarian_tidak_benar
 Show_ArXiv_column=
+
+You_must_enter_an_integer_value_in_the_interval_1025-65535_in_the_text_field_for=
