@@ -1143,7 +1143,6 @@ You_have_cleared_this_field._Original_value=Il_campo_\u00E8_stato_annullato._Val
 
 You_have_entered_an_invalid_search_'%0'.=\u00C8_stata_inserita_una_ricerca_non_valida_'%0'.
 You_must_choose_a_file_name_to_store_journal_abbreviations=Scegliere_un_nome_per_il_file_in_cui_registrare_le_abbreviazioni_delle_riviste
-You_must_enter_an_integer_value_in_the_text_field_for=Immettere_un_numero_intero_nel_campo_di_testo_per
 You_must_fill_in_a_name_for_the_entry_type.=Fornire_un_nome_per_il_tipo_di_voce.
 You_must_restart_JabRef_for_the_new_key_bindings_to_work_properly.=Riavviare_Jabref_per_rendere_operative_le_nuove_assegnazioni_di_tasti.
 You_must_select_at_least_one_row_to_perform_this_operation.=Selezionare_almeno_una_riga_per_effettuare_questa_operazione
@@ -1386,3 +1385,4 @@ User-specific_file_directory=Cartella_dei_file_specifica_dell'utente
 Error_setting_look_and_feel=Errore_nell'impostazione_del_"Look-and-Feel"
 Search_failed\:_illegal_search_expression=Ricerca_fallita:_espressione_di_ricerca_illegale
 Show_ArXiv_column=Mostra_la_colonna_ArXiv
+You_must_enter_an_integer_value_in_the_interval_1025-65535_in_the_text_field_for=
