@@ -2148,7 +2148,7 @@ You_have_entered_an_invalid_search_'%0'.=\u7121\u52b9\u306a\u691c\u7d22\u300c%0\
 
 You_must_choose_a_file_name_to_store_journal_abbreviations=\u5b66\u8853\u8a8c\u7565\u8a9e\u3092\u4fdd\u7ba1\u3059\u308b\u30d5\u30a1\u30a4\u30eb\u540d\u3092\u9078\u3070\u306a\u304f\u3066\u306f\u306a\u308a\u307e\u305b\u3093
 
-You_must_enter_an_integer_value_in_the_text_field_for=\u4ee5\u4e0b\u306e\u30c6\u30af\u30b9\u30c8\u30d5\u30a3\u30fc\u30eb\u30c9\u306b\u306f\u6574\u6570\u5024\u3092\u5165\u529b\u3057\u306a\u304f\u3066\u306f\u306a\u308a\u307e\u305b\u3093:
+You_must_enter_an_integer_value_in_the_interval_1025-65535_in_the_text_field_for=
 
 You_must_fill_in_a_name_for_the_entry_type.=\u9805\u76ee\u578b\u306e\u540d\u79f0\u3092\u5165\u529b\u3057\u306a\u304f\u3066\u306f\u306a\u308a\u307e\u305b\u3093\u3002
 
