@@ -1946,8 +1946,6 @@ You_have_entered_an_invalid_search_'%0'.=
 
 You_must_choose_a_file_name_to_store_journal_abbreviations=U_moet_een_bestandsnaam_kiezen_om_tijdschrift_afkortingen_op_te_slaan
 
-You_must_enter_an_integer_value_in_the_text_field_for=U_moet_een_gehele_waarde_in_het_tekstveld_ingeven_voor
-
 You_must_fill_in_a_name_for_the_entry_type.=U_moet_een_naam_invullen_voor_het_entry_type.
 
 You_must_restart_JabRef_for_the_new_key_bindings_to_work_properly.=U_moet_JabRef_herstarten_zodat_de_nieuwe_sneltoetsen_correct_kunnen_werken.
@@ -2183,3 +2181,5 @@ User-specific_file_directory=
 Error_setting_look_and_feel=
 Search_failed\:_illegal_search_expression=
 Show_ArXiv_column=
+
+You_must_enter_an_integer_value_in_the_interval_1025-65535_in_the_text_field_for=
