@@ -1124,7 +1124,6 @@ You_have_cleared_this_field._Original_value=Du_har_slettet_dette_feltet._Origina
 
 You_have_entered_an_invalid_search_'%0'.=Ugyldig_s\u00F8keuttrykk_'%0'.
 You_must_choose_a_file_name_to_store_journal_abbreviations=Du_m\u00E5_velge_et_filnavn_for_\u00E5_lagre_journalforkortelser
-You_must_enter_an_integer_value_in_the_text_field_for=Du_m\u00E5_skrive_et_heltall_i_tekstfeltet_for
 You_must_fill_in_a_name_for_the_entry_type.=Du_m\u00E5_velge_et_navn_for_enhetstypen.
 You_must_restart_JabRef_for_the_new_key_bindings_to_work_properly.=Du_m\u00E5_starte_JabRef_p\u00E5_nytt_for_at_de_nye_hurtigtastene_skal_fungere.
 You_must_select_at_least_one_row_to_perform_this_operation.=Du_m\u00E5_velge_minst_\u00E9n_rad_f\u00F8r_du_kan_bruke_denne_operasjonen.
@@ -1361,3 +1360,5 @@ User-specific_file_directory=
 Error_setting_look_and_feel=
 Search_failed\:_illegal_search_expression=
 Show_ArXiv_column=
+
+You_must_enter_an_integer_value_in_the_interval_1025-65535_in_the_text_field_for=
