@@ -1063,7 +1063,6 @@ You_have_changed_the_look_and_feel_setting._You_must_restart_JabRef_for_this_to_
 You_have_cleared_this_field._Original_value=Bu_alan\u0131_sildiniz._Orijinal_de\u011Fer
 You_have_entered_an_invalid_search_'%0'.=Ge\u00E7ersiz_bir_arama_girdiniz_'%0'.
 You_must_choose_a_file_name_to_store_journal_abbreviations=Dergi_k\u0131saltmalar\u0131n\u0131_kaydetmek_i\u00E7in_bir_dosya_ad\u0131_se\u00E7melisiniz
-You_must_enter_an_integer_value_in_the_text_field_for=\u015Eu_metin_alan\u0131na_bir_tamsay\u0131_de\u011Feri_girmelisiniz
 You_must_fill_in_a_name_for_the_entry_type.=Girdi_t\u00FCr\u00FC_i\u00E7in_bir_isim_girmelisiniz.
 You_must_restart_JabRef_for_the_new_key_bindings_to_work_properly.=Yeni_anahtar_demetlerinin_d\u00FCzg\u00FCn_\u00E7al\u0131\u015Fmas\u0131_i\u00E7in_JabRef'i_yeniden_ba\u015Flatmal\u0131s\u0131n\u0131z.
 You_must_select_at_least_one_row_to_perform_this_operation.=Bu_i\u015Flemi_ger\u00E7ekle\u015Ftirmek_i\u00E7in_en_az_bir_sat\u0131r_se\u00E7melisiniz.
@@ -1297,3 +1296,5 @@ User-specific_file_directory=
 Error_setting_look_and_feel=
 Search_failed\:_illegal_search_expression=
 Show_ArXiv_column=
+
+You_must_enter_an_integer_value_in_the_interval_1025-65535_in_the_text_field_for=
