@@ -2134,8 +2134,6 @@ You_have_entered_an_invalid_search_'%0'.=B\u1EA1n_\u0111\u00E3_nh\u1EADp_m\u1ED9
 
 You_must_choose_a_file_name_to_store_journal_abbreviations=B\u1EA1n_ph\u1EA3i_ch\u1ECDn_m\u1ED9t_t\u00EAn_t\u1EADp_tin_\u0111\u1EC3_l\u01B0u_tr\u1EEF_c\u00E1c_vi\u1EBFt_t\u1EAFt_t\u00EAn_t\u1EA1p_ch\u00ED
 
-You_must_enter_an_integer_value_in_the_text_field_for=B\u1EA1n_ph\u1EA3i_nh\u1EADp_gi\u00E1_tr\u1ECB_s\u1ED1_nguy\u00EAn_trong_tr\u01B0\u1EDDng_ch\u1EEF_cho
-
 You_must_fill_in_a_name_for_the_entry_type.=B\u1EA1n_ph\u1EA3i_nh\u1EADp_m\u1ED9t_t\u00EAn_cho_ki\u1EC3u_m\u1EE5c.
 
 You_must_restart_JabRef_for_the_new_key_bindings_to_work_properly.=B\u1EA1n_ph\u1EA3i_kh\u1EDFi_\u0111\u1ED9ng_l\u1EA1i_JabRef_\u0111\u1EC3_c\u00E1c_t\u1ED5_h\u1EE3p_ph\u00EDm_m\u1EDBi_ho\u1EA1t_\u0111\u1ED9ng_\u0111\u01B0\u1EE3c.
@@ -2177,3 +2175,5 @@ User-specific_file_directory=
 Error_setting_look_and_feel=
 Search_failed\:_illegal_search_expression=
 Show_ArXiv_column=
+
+You_must_enter_an_integer_value_in_the_interval_1025-65535_in_the_text_field_for=
