@@ -1920,8 +1920,6 @@ You_have_entered_an_invalid_search_'%0'.=\u60A8\u8F93\u5165\u4E86\u4E00\u4E2A\u9
 
 You_must_choose_a_file_name_to_store_journal_abbreviations=\u60A8\u5FC5\u987B\u9009\u62E9\u4E00\u4E2A\u6587\u4EF6\u540D\u6765\u5B58\u50A8\u671F\u520A\u540D\u79F0\u7F29\u5199
 
-You_must_enter_an_integer_value_in_the_text_field_for=\u60A8\u5FC5\u987B\u5728\u6587\u672C\u57DF\u4E2D\u8F93\u5165\u4E00\u4E2A\u6574\u6570\u4EE5\u4F7F
-
 You_must_fill_in_a_name_for_the_entry_type.=\u60A8\u5FC5\u987B\u4E3A\u8BE5\u7C7B\u578B\u8F93\u5165\u4E00\u4E2A\u540D\u79F0.
 
 You_must_restart_JabRef_for_the_new_key_bindings_to_work_properly.=\u4E3A\u4F7F\u70ED\u952E\u7ED1\u5B9A\u751F\u6548\uFF0C\u60A8\u5FC5\u987B\u91CD\u542F_JabRef\u3002
@@ -2172,3 +2170,5 @@ User-specific_file_directory=
 Error_setting_look_and_feel=
 Search_failed\:_illegal_search_expression=
 Show_ArXiv_column=
+
+You_must_enter_an_integer_value_in_the_interval_1025-65535_in_the_text_field_for=
