@@ -1,3 +1,4 @@
+    - Restricted remote listener port numbers to interval 1025-65535.
     - Added Japanese translation by Koji Yokota.
     - Added scrollbar to entry editor when it is too high to fit in its panel. Patch
       by Matthias Erll 
